# gameOfLife

./: CMakeLists.txt  TODO
include/: gameOfLife.hpp  view.hpp
src/: form.ui  gameOfLife.cpp  main.cpp  view.cpp
src/include/: gameOfLife.h
